Fix Judging for the final time ig

--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -86,8 +86,7 @@
         display: flex;
         align-items: center;
         justify-content: space-evenly;
-        min-height: 100vh;
-        min-width: 100vw;
+        width: 100%;
     }
 
     .reg-form-container {
