--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <div class="wrapper">
+    <div>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
         <%- include('partials/nav.ejs') %>
         <%- body %>
