--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -18,30 +18,48 @@
 
             <div class="field">
                 <label for="score1">Innovation</label>
+                <p>Is this a new concept or a new approach to an existing concept?<br>
+                Is it an out-of-the box solution or is it creative in its solution approach?</p>
                 <input type="number" value="0" name="score1" id="score1" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;" >
             </div>
             <div class="field">
                 <label for="score2">Functionality</label>
+                <p>Does the project work as described?<br>
+                Is it a sound solution without significant bugs?<br>
+                How well does the project accomplish its stated goal?<br>
+                How is the design (UI, code readability)?<br>
+                How is the intractability of the project?</p>
                 <input type="number" value="0" name="score2" id="score2" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
             <div class="field">
                 <label for="score3">Practicality</label>
+                <p>How feasible is the solution in a real-world context?<br>
+                Are the required resources for a full-scale implementation justified for its potential impact?<br>
+                Is the project scalable to cater to a larger user base?</p>
                 <input type="number" value="0" name="score3" id="score3" min="0" max="5" placeholder="Enter a value between 0-5"  onkeyup="if (value < 0) value = 0; else if (value > 5) value = 5;">
             </div>
             <div class="field">
                 <label for="score4">Presentation</label>
+                <p>How well do the presenters convey their ideas?<br>
+                Was there evident collaboration/team spirit?<br>
+                How clear was the goals/purpose of the project?</p>
                 <input type="number" value="0" name="score4" id="score4" min="0" max="10" placeholder="Enter a value between 0-10"  onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
             <div class="field">
                 <label for="score5">QnA</label>
+                <p>Was the team able to answer questions clearly and thoughtfully?<br>
+                Were the answers concise?</p>
                 <input type="number" value="0" name="score5" id="score5" min="0" max="5" placeholder="Enter a value between 0-5" onkeyup="if (value < 0) value = 0; else if (value > 5) value = 5;">
             </div>
             <div class="field">
                 <label for="score6">Category Fit</label>
+                <p>How well did the project fit into the certain category?</p>
                 <input type="number" value="0" name="score6" id="score6" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
             <div class="field">
                 <label for="comments">Any Comments?</label>
+                <p>Category specific notes for deciding category winners (maybe give guiding questions?)<br>
+                Any general notes</p>
                 <input type="text" value="Hi" name="comments" id="comments" placeholder="Enter some text">
             </div>
             <button type="submit" class="reg-submit">To Next Project →</button>
@@ -51,6 +69,12 @@
 </div>
 
 <style>
+    .field p {
+        color: var(--violet);
+        margin-bottom: 5px;
+        text-wrap: wrap;
+    }
+
     #form-title {
         color: white;
         font-size: 22pt;
