Judge add Score Card

--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -17,13 +17,13 @@
             </h1>
 
             <div class="field">
-                <label for="score1">Innovation</label>
+                <label for="score1">Innovation (0-10)</label>
                 <p>Is this a new concept or a new approach to an existing concept?<br>
                 Is it an out-of-the box solution or is it creative in its solution approach?</p>
                 <input type="number" value="0" name="score1" id="score1" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;" >
             </div>
             <div class="field">
-                <label for="score2">Functionality</label>
+                <label for="score2">Functionality (0-10)</label>
                 <p>Does the project work as described?<br>
                 Is it a sound solution without significant bugs?<br>
                 How well does the project accomplish its stated goal?<br>
@@ -32,27 +32,27 @@
                 <input type="number" value="0" name="score2" id="score2" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
             <div class="field">
-                <label for="score3">Practicality</label>
+                <label for="score3">Practicality (0-5)</label>
                 <p>How feasible is the solution in a real-world context?<br>
                 Are the required resources for a full-scale implementation justified for its potential impact?<br>
                 Is the project scalable to cater to a larger user base?</p>
                 <input type="number" value="0" name="score3" id="score3" min="0" max="5" placeholder="Enter a value between 0-5"  onkeyup="if (value < 0) value = 0; else if (value > 5) value = 5;">
             </div>
             <div class="field">
-                <label for="score4">Presentation</label>
+                <label for="score4">Presentation (0-10)</label>
                 <p>How well do the presenters convey their ideas?<br>
                 Was there evident collaboration/team spirit?<br>
                 How clear was the goals/purpose of the project?</p>
                 <input type="number" value="0" name="score4" id="score4" min="0" max="10" placeholder="Enter a value between 0-10"  onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
             <div class="field">
-                <label for="score5">QnA</label>
+                <label for="score5">QnA (0-5)</label>
                 <p>Was the team able to answer questions clearly and thoughtfully?<br>
                 Were the answers concise?</p>
                 <input type="number" value="0" name="score5" id="score5" min="0" max="5" placeholder="Enter a value between 0-5" onkeyup="if (value < 0) value = 0; else if (value > 5) value = 5;">
             </div>
             <div class="field">
-                <label for="score6">Category Fit</label>
+                <label for="score6">Category Fit (0-10)</label>
                 <p>How well did the project fit into the certain category?</p>
                 <input type="number" value="0" name="score6" id="score6" min="0" max="10" placeholder="Enter a value between 0-10" onkeyup="if (value < 0) value = 0; else if (value > 10) value = 10;">
             </div>
