Judge add Score Card

--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -130,8 +130,8 @@
     }
 
     .reg-form-container label {
-        color: var(--grey);
-        font-size: 14px;
+        color: var(--white);
+        font-size: 18px;
         margin-bottom: 0.8rem;
     }
 
