--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,7 +65,7 @@
         --text: #94a1b2;
         --grey: #72757e;
         --overlay-grey: #252525;
-        --violet: #7f5af0;
+        --violet: #0cd4fc;
     }
 </style>
 
