Added current project vs total projects

--- a/views/judge.ejs
+++ b/views/judge.ejs
@@ -3,7 +3,11 @@
 
         <form action="/dashboard" method="post">
             <h1 id="form-title">Table Number: <span id="info" style="width: min-content;">
-                    <%=currentTable%>
+                    <%=currentTable%> 
+                </span>
+            </h1>
+            <h1 id="form-title">Projects Judged: <span id="info" style="width: min-content;">
+                <%=currentSlot%> / <%=totalProjects%> 
                 </span>
             </h1>
             <h1 id="form-title">Project Name: <span id="info" style="width: min-content;">
